<resources>
    <string name="app_name">Caller</string>
    <string name="title_callog">Call Log</string>
    <string name="title_messages">Messages</string>
    <string name="title_blocked">Blocked</string>
    <string name="title_premium">Premium</string>
    <string name="title_assistant">Assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>