<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_callog"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_callog" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_blocked"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_blocked" />


    <item
        android:id="@+id/navigation_premium"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_premium" />

    <item
        android:id="@+id/navigation_assistant"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_assistant" />

</menu>